# MiniCompiler

./: .gitignore  README.md  array_test.asm  ast.txt  build_demo.bat  build_demo.sh  demo.obj.s  factorial.asm  if_test.asm  main.asm  pyproject.toml  requirements.txt  tokens.txt  while_test.asm
docs/: language_spec.md  syntax_spec.md
examples/: array_test.mc  demo.mc  factorial.mc  hello.mc  if_test.mc  while_test.mc
runtime/: runtime.asm
src/: cli.py  error.py  main.py
src/codegen/: emitter.py  generator.py
src/ir/: generator.py  ir.py
src/lexer/: lexer.py  token.py
src/mast/: node.py
src/parser/: parser.py
src/semantic/: analyzer.py  errors.py  symbol_table.py  type_system.py
tests/: run_all_tests.py  test_runner.py  test_sprint_1_lexer.py  test_sprint_2_parser.py  test_sprint_3_semantic.py  test_sprint_4_ir.py  test_sprint_5_codegen.py  test_sprint_6_control_flow.py  test_sprint_7_arrays.py
tests/lexer/valid/: test_keywords.src
