[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minicompiler"
version = "0.1.0"
description = "MiniCompiler - курс по созданию компилятора"
authors = [{ name = "Jane Frosty" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
minicompiler = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]